--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -3,7 +3,7 @@ h1{
 	font-family: sans-serif;
 }
 
-.btn {
+/*.btn {
   background: #639FDE;
   border-radius: 28px;
   font-family: sans-serif;
@@ -12,12 +12,15 @@ h1{
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   text-align: center;
-}
+}*/
 
 .btn:hover{
   background-color: #2380E2;
 }
 
+.form1 {
+  font-size: 20px;
+}
 
 .jumbotron{
 	background-color: #dcdcdc;
