--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -1,7 +1,7 @@
-<a ui-sref="searchBar.results">
-  <div class="results-list">
-    <h3>ResultsColumn</h3>
-    <h4>{{news}}</h4>
-    <h5>(ui-sref="resultsColumn" is right here)</h5>
-  </div>
-</a>
+<div class="results-list">
+  <h3>ResultsColumn</h3>
+  <h4>{{news}}</h4>
+  <ul>
+    <li ng-repeat="item in data">{{item}}</li>
+  </ul>
+</div>
