did BIG things. (grabbing sentiment, political, and emotional scores.)

--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -36,7 +36,7 @@
           <a href={{item.url}} target="_blank"><h6>{{item.url}}</h6></a>
         </li>
         <li>
-          {{item.summary}}{{item.score}}{{item.political}}
+          {{item.summary}}{{item.score}}{{item.political}}{{item.emotion}}{{item.personality}}
         </li>
         <hr/>
       </ul>
