--- a/client/views/searchBar.html
+++ b/client/views/searchBar.html
@@ -1,14 +1,39 @@
-<div class='jumbotron'>
-  <h1>{{appName}}</h1>
-</div>
-</hr>
-<form class="inputdata" role="search">
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Search" ng-model="input">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">{{appName}}</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <form class="navbar-form navbar-right">
+        <a class="btn btn-success" href="/auth/github" target="_blank" role="button" button type="submit">Sign in with Github</a>
+      </form>
+    </div>
   </div>
-  <a ui-sref=".results">
-    <button type="submit" class="btn btn-default" ng-click="getLinks()">{{buttonText}}</button>
-  </a>
-</form>
+</nav>
+<div class='jumbotron'>
+  <div class="container">
+    <h1>{{appName}}</h1>
+  </div>
+  <!-- search field and go button -->
+  <div class="row one">
+    <div class="col-md-12">
+      <form class="inputdata" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control form1" placeholder="Search for..." ng-model="input">
+        </div>
+        <a ui-sref=".results">
+          <button type="submit" class="btn btn-default" ng-click="getLinks()">{{buttonText}}</button>
+        </a>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- /search field and go button -->
 <hr/>
 <div ui-view></div>
