--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -1,16 +1,30 @@
-<div class="results-list">
-  <div id="container">
-    <h3>{{heading}}</h3>
-    <div class="links" ng-repeat="item in data.data">
-      <ul>
-        <li>
-          <a href={{item.url}} target="_blank"><h6>{{item.url}}</h6></a>
-        </li>
-        <li>
-          {{item.summary}}
-        </li>
-        <hr/>
-      </ul>
+<div class="row">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading" <h3>{{heading}}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="list-group" ng-repeat="item in data.data">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="{{item.img}}" alt="happy-face" width="72" height="72">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">{{item.headline}}</h4>
+                  <a href={{item.url}} target="_blank"><h5 class="list-group-item-heading">{{item.url}}</h5></a>
+                  <p class="text">{{item.summary}}</p>
+                  <p><a class="btn btn-default" href={{item.url}} target="_blank" role="button">View details &raquo;</a>
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </div>
