--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -1,6 +1,7 @@
 body {
-  padding-top: 50px;
+  padding-top: 80px;
   padding-bottom: 20px;
+  background-color: #f5f8fa;
 }
 
 .one {
@@ -16,11 +17,55 @@ body {
   font-size: 14px;
 }
 
-.jumbotron {
+
+/*.jumbotron {
   background-color: #dcdcdc;
   text-align: center;
   border-radius: 2px;
+}*/
+
+.jumbotron {
+  height: 300px;
+  padding: 40px 15px;
+  text-align: center;
 }
+
+.starter-template {
+  padding: 40px 15px;
+  text-align: center;
+}
+
+[class*="col-"] {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.panel {
+  background-color: #ebebeb;
+  border-color: #e1e8ed;
+}
+
+
+.inputdata input {
+  width: 360px;
+  display: block;
+  font-size: 15px;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+
+input[type=url] {
+  display: inline
+}
+
+input[type=url]:focus {
+  outline: none;
+}
+
+
+/*animate*/
 
 .slide.ng-leave {
   position: relative;
