Minor search bar formatting changes

--- a/client/views/searchBar.html
+++ b/client/views/searchBar.html
@@ -61,7 +61,7 @@
     <div class="col-md-12">
       <form class="inputdata" role="search">
         <div class="form-group">
-          <input type="text" class="form-control form1" placeholder="Search for..." ng-model="input">
+          <input type="text" class="form-control form1" placeholder="Enter a political news topic..." ng-model="input">
         </div>
         <a ui-sref=".results">
           <button type="submit" class="btn btn-default" ng-click="getLinks()">{{buttonText}}</button>
