--- a/client/views/modal.html
+++ b/client/views/modal.html
@@ -10,7 +10,7 @@
   <div ng-controller="ModalController">
     <script type="text/ng-template" id="myModalContent.html">
       <div class="modal-header">
-        <h3 class="modal-title">I'm a modal!</h3>
+        <h3 class="modal-title">I am a modal!</h3>
       </div>
       <div class="modal-body">
         <ul>
