Finally got the images to work. Also added a fallback option to use favicons if an image fails to come back from the API. Also added the image-size node module, but I modified the files so I moved the module itself into the server/modules/image-size directory to avoid conflicts or overwritten files.

--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -12,7 +12,7 @@
               <div class="media">
                 <div class="media-left">
                   <a href="#">
-                    <img class="media-object" src="{{item.thumbnail[0]}}" alt="happy-face" /></a>
+                    <img class="media-object" src="{{item.thumbnail.url}}" alt="happy-face" /></a>
                   <!-- width="72" height="72" -->
                 </div>
                 <div class="media-body">
