--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -29,22 +29,37 @@
                 <div class="media-right">
                   <span class="media-object">
                     <h5 class="text-center">
-                       <hr/>
-                      {{item.score}}
-                      <hr/>
-                      <!-- {"emotion":"sadness","score":37} -->
-                      {{item.emotion.emotion}}
-                      {{item.emotion.score}}
-                      <hr/>
-                      <!-- {"party":"Conservative","score":35}  -->
-                      {{item.political.party}}
-                      {{item.political.score}}
-                      <hr/>
-                      <!-- {"personality":"openness","score":0.5518578986612521}  -->
-                      {{item.personality.personality}}
-                      {{item.personality.score}}
-                      <hr/>
+                      
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+                        aria-valuemin="0" aria-valuemax="100" style="width:{{item.score}}%">
+                        {{item.score}}%
+                      </div>
+                    </div>
 
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50"
+                        aria-valuemin="0" aria-valuemax="100" style="width:{{item.emotion.score}}%">
+                        {{item.emotion.emotion}}
+                        {{item.emotion.score}}%
+                      </div>
+                    </div>
+
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
+                        aria-valuemin="0" aria-valuemax="100" style="width:{{item.political.score}}%">
+                        {{item.political.party}}
+                        {{item.political.score}}%
+                      </div>
+                    </div>
+
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
+                        aria-valuemin="0" aria-valuemax="100" style="width:{{item.personality.score}}%">
+                        {{item.personality.personality}}
+                        {{item.personality.score}}%
+                      </div>
+                    </div>
 
                     </h5>
                   </span>
