--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <!-- Results Column -->
+    <!-- Sentiment Scores Panel -->
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4>{{heading}}</h4>
@@ -10,10 +10,11 @@
           <ul class="list-group">
             <li class="list-group-item">
               <div class="media media-news">
-                <!-- overall score -->
+                <!-- news image -->
                 <div class="media-left">
                   <a href="#">
-                    <img class="media-object media-photo" src="{{item.thumbnail.url}}" alt="happy-face"></a>
+                    <img class="media-object" src="{{item.thumbnail.url}}" alt="S" width="172" height="172">
+                  </a>
                 </div>
                 <div class="well">
                   <div class="media-body">
@@ -22,7 +23,7 @@
                     <!-- story -->
                     <p class="text">{{item.summary}}</p>
                     <a class="btn btn-info bdg-score" href="{{item.url}}" target="_blank" role="button">
-                      <img src="{{item.img}}" alt="X" width="24" height="24" /> View source &raquo;
+                      <img src="{{item.img}}" alt="X" width="16" height="16" /> View source &raquo;
                     </a>
                   </div>
                 </div>
@@ -30,9 +31,9 @@
                 <div class="media-right">
                   <ul class="list-group list-scores">
                     <li class="list-group-item"><strong class="score">{{item.score}}</strong></li>
-                    <li class="list-group-item">{{item.political.score}}<span class "score-fnt">{{item.political.party}}</span></li>
-                    <li class="list-group-item">{{item.emotion.score}}<span class "score-fnt">{{item.emotion.emotion}}</span></li>
-                    <li class="list-group-item">{{item.personality.score}}<span class "score-fnt">{{item.personality.personality}}</span></li>
+                    <li class="list-group-item">{{item.political.score}} <span class="small-fnt">{{item.political.party}}</span></li>
+                    <li class="list-group-item">{{item.emotion.score}} <span class="small-fnt">{{item.emotion.emotion}}</span></li>
+                    <li class="list-group-item">{{item.personality.score}} <span class="small-fnt">{{item.personality.personality}}</span></li>
                   </ul>
                 </div>
               </div>
