--- a/client/views/searchBar.html
+++ b/client/views/searchBar.html
@@ -1,6 +1,6 @@
 <!-- search field and go button -->
 <div class="jumbotron">
-  <div class="container">
+  <div class="container-fluid">
     <h1>{{appName}}</h1>
     <p class="lead"></p>
   </div>
