--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -13,11 +13,11 @@
                 <!-- news image -->
                 <div class="media-left">
                   <a href="#">
-                    <img class="media-object" src="{{item.thumbnail.url}}" alt="S" width="172" height="172">
+                    <img class="media-object media-photo" src="{{item.thumbnail.url}}" alt="S" />
                   </a>
                 </div>
-                <div class="well">
-                  <div class="media-body">
+                <div class="media-body">
+                  <div class="well">
                     <!-- headline -->
                     <h4 class="media-heading">{{item.headline}}</h4>
                     <!-- story -->
