--- a/client/views/about.html
+++ b/client/views/about.html
@@ -1,11 +1,11 @@
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <div class="jumbotron">
-          <h2 class="text-center">{{title}}</h2>
+      <div class="col-md-12">
+        <div class="well-lg middle-about">
+          <h2>{{title}}</h2>
           <hr/>
-          <p class="lead text-justify">{{paragraph}}</p>
+          <p class="lead text-info text-justify">{{paragraph}}</p>
         </div>
       </div>
     </div>
