Endpoints for trending and trending function in controller

--- a/client/views/searchBar.html
+++ b/client/views/searchBar.html
@@ -15,6 +15,7 @@
             {{buttonText}}
           </button>
         </a>
+        <div>{{trending}}</div>
       </form>
     </div>
   </div>
