--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -30,8 +30,7 @@
                 <!-- sentiment score visual -->
                 <div class="media-right">
                   <ul class="list-group list-scores">
-                    <li class="list-group-item lgi">
-
+                    <li class="list-group-item lgi"><span class="sentiment">SENTIMENT</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{item.score.score}}%">
                           <!-- <span uib-tooltip="{{item.score.tt}}" tooltip-class="addclasshere"></span> -->
@@ -39,21 +38,21 @@
                         </div>
                       </div>
                     </li>
-                    <li class="list-group-item lgi">
+                    <li class="list-group-item lgi"><span class="sentiment">SENTIMENT</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{{item.emotion.score}}%">
                           <span uib-tooltip="{{item.tt.emotion}}" tooltip-class="addclasshere">{{item.emotion.emotion}} {{item.emotion.score}}%</span>
                         </div>
                       </div>
                     </li>
-                    <li class="list-group-item lgi">
+                    <li class="list-group-item lgi"><span class="sentiment">SENTIMENT</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{item.political.score}}%">
                           <span uib-tooltip="{{item.tt.political}}" tooltip-class="addclasshere">{{item.political.party}} {{item.political.score}}%</span>
                         </div>
                       </div>
                     </li>
-                    <li class="list-group-item lgi">
+                    <li class="list-group-item lgi"><span class="sentiment">SENTIMENT</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{item.personality.score}}%">
                           <span uib-tooltip="{{item.tt.personality}}" tooltip-class="addclasshere">{{item.personality.personality}} {{item.personality.score}}%</span>
