Implemented basic authentication

--- a/client/views/signin.html
+++ b/client/views/signin.html
@@ -7,6 +7,7 @@
           <form class="inputdata" name="signinForm" ng-submit="signin()">
             <input type="text" placeholder="username" ng-model="user.username">
             <input type="password" placeholder="password" ng-model="user.password">
+            <button class="btn btn-submit">submit</button>
             <a href="/auth/github" class="btn btn-lrg btn-social btn-github" role="button" button type="button">
               <span class="fa fa-github"></span>Sign in with Github</a>
           </form>
