--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -7,7 +7,7 @@
           <form class="inputdata" name="signupForm" ng-submit="signup()">
             <input type="text" placeholder="username" ng-model="user.username">
             <input type="password" placeholder="password" ng-model="user.password">
-            <button class="btn btn-submit" type="button" role="submit">sign up</button>
+            <button class="btn btn-submit">sign up</button>
           </form>
           <h6>
             <a href="#/signin">Already have an account?<br>
